--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -124,7 +124,7 @@ LeadScreen As screen:
 
             lblestimatenumbervalueLdS As label:
                 Size: =16
-                Text: =If(IsBlank(glryleadlistLS.Selected.LeadEstimateNumber),"Not Available",glryleadlistLS.Selected.LeadEstimateNumber)
+                Text: =If(IsBlank(glryleadlistLS.Selected.LeadEstimateNumber),"Pending",glryleadlistLS.Selected.LeadEstimateNumber)
                 Width: =Parent.Width/2
                 ZIndex: =2
 
@@ -606,7 +606,7 @@ LeadScreen As screen:
                 lblcommentLdS As label:
                     Height: =100
                     Size: =16
-                    Text: ="Send lead back to the technician along with comments."
+                    Text: ="Send lead back to the Technician along with comments."
                     Width: =800
                     X: =20
                     Y: =lblrejectionLdS.Height+lblrejectionLdS.Y
@@ -651,7 +651,7 @@ LeadScreen As screen:
                             LeadRejected.Run(glryleadlistLS.Selected.Email,glryleadlistLS.Selected.LeadTrackingNumber,VarLoggedInUser.FullName);
                             Notify("Lead rejected with comment successfully.");
                         )
-                    Text: ="Submit back to technician"
+                    Text: ="Submit back to Technician"
                     Width: =300
                     X: =410
                     Y: =txitnptrejectLdS.Height+txitnptrejectLdS.Y+40
@@ -721,7 +721,7 @@ LeadScreen As screen:
 
                         lblleadstatusLdS As label:
                             FillPortions: =1
-                            Text: =glryleadlistLS.Selected.LeadStatus
+                            Text: =If(glryleadlistLS.Selected.LeadStatus="InProgress","In Progress",glryleadlistLS.Selected.LeadStatus)
                             ZIndex: =2
 
                     icnleadinfoleaddetailsLdS_2 As icon.Add:
@@ -1055,7 +1055,7 @@ LeadScreen As screen:
                         lblnotesLdS As label:
                             FontWeight: =FontWeight.Bold
                             Height: =70
-                            Text: ="Material,Part Number & Other things "
+                            Text: ="Material / Parts Required / Comments"
                             Width: =200
                             ZIndex: =1
 
