--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -152,7 +152,7 @@ LeadListScreen As screen:
                             BorderColor: =Header.SHRed
                             ChevronBackground: =Header.SHRed
                             ChevronHoverBackground: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
-                            DisplayFields: =["cr02d_territory"]
+                            DisplayFields: =["Value"]
                             HoverFill: =RGBA(0, 0, 0, 0)
                             InputTextPlaceholder: ="Select Territory"
                             IsSearchable: =false
@@ -160,7 +160,7 @@ LeadListScreen As screen:
                             PressedColor: =RGBA(0, 0, 0, 1)
                             PressedFill: =RGBA(0, 0, 0, 0)
                             Reset: =true
-                            SearchFields: =["cr02d_territory"]
+                            SearchFields: =["Value"]
                             SearchItems: =[]
                             SelectionFill: =Header.SHRed
                             SelectMultiple: =false
@@ -173,14 +173,14 @@ LeadListScreen As screen:
                             BorderColor: =Header.SHRed
                             ChevronBackground: =Header.SHRed
                             ChevronHoverBackground: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
-                            DisplayFields: =["cr02d_area"]
+                            DisplayFields: =["Value"]
                             InputTextPlaceholder: ="Select Area"
                             IsSearchable: =false
                             Items: =Distinct(SHTechnicians,Area) //Filter(SHTechnicians, District = cmbxdistrictfilterLS.Selected.Value)
                             PressedColor: =RGBA(0, 0, 0, 1)
                             PressedFill: =RGBA(0, 0, 0, 0)
                             Reset: =true
-                            SearchFields: =["cr02d_area"]
+                            SearchFields: =["Value"]
                             SearchItems: =[]
                             SelectionFill: =Header.SHRed
                             Width: =200
@@ -294,7 +294,7 @@ LeadListScreen As screen:
                     Color: =RGBA(116, 116, 116, 1)
                     Height: =50
                     Text: |-
-                        ="Note:1)Search on QQ Team Name or Mechanic Name or  Contract No. or Lead Tracking No.
+                        ="Note:1)Search on QQ Team Name, Mechanic Name, Contract No. or Lead Tracking No.
                                   2)Click on specific lead to see details."
                     VerticalAlign: =VerticalAlign.Top
                     Width: =Parent.Width
