--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -135,13 +135,12 @@ LeadListScreen As screen:
                             ChevronHoverBackground: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
                             DisplayFields: =["Value"]
                             InputTextPlaceholder: ="Select District"
-                            IsSearchable: =false
                             Items: =Distinct(Filter(SHTechnicians,Territory=cmbxregionfilterLS.Selected.Value),District)
                             PressedColor: =RGBA(0, 0, 0, 1)
                             PressedFill: =RGBA(0, 0, 0, 0)
                             Reset: =true
                             SearchFields: =["Value"]
-                            SearchItems: =[]
+                            SearchItems: =Search(Distinct(Filter(SHTechnicians,Territory=cmbxregionfilterLS.Selected.Value),District),cmbxdistrictfilterLS.SearchText,"Value")
                             SelectionFill: =Header.SHRed
                             Width: =200
                             X: =cmbxregionfilterLS.X+cmbxregionfilterLS.Width+5
@@ -155,13 +154,12 @@ LeadListScreen As screen:
                             DisplayFields: =["Value"]
                             HoverFill: =RGBA(0, 0, 0, 0)
                             InputTextPlaceholder: ="Select Territory"
-                            IsSearchable: =false
                             Items: =Distinct(Filter(SHTechnicians,Area=cmbxareafilterLS.Selected.Value),Territory)
                             PressedColor: =RGBA(0, 0, 0, 1)
                             PressedFill: =RGBA(0, 0, 0, 0)
                             Reset: =true
                             SearchFields: =["Value"]
-                            SearchItems: =[]
+                            SearchItems: =Search(Distinct(Filter(SHTechnicians,Area=cmbxareafilterLS.Selected.Value),Territory),cmbxregionfilterLS.SearchText,"Value")
                             SelectionFill: =Header.SHRed
                             SelectMultiple: =false
                             Width: =200
@@ -175,13 +173,12 @@ LeadListScreen As screen:
                             ChevronHoverBackground: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
                             DisplayFields: =["Value"]
                             InputTextPlaceholder: ="Select Area"
-                            IsSearchable: =false
                             Items: =Distinct(SHTechnicians,Area) //Filter(SHTechnicians, District = cmbxdistrictfilterLS.Selected.Value)
                             PressedColor: =RGBA(0, 0, 0, 1)
                             PressedFill: =RGBA(0, 0, 0, 0)
                             Reset: =true
                             SearchFields: =["Value"]
-                            SearchItems: =[]
+                            SearchItems: =Search(Distinct(SHTechnicians,Area) //Filter(SHTechnicians, District = cmbxdistrictfilterLS.Selected.Value),cmbxareafilterLS.SearchText,"Value")
                             SelectionFill: =Header.SHRed
                             Width: =200
                             X: =15
