--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -570,7 +570,7 @@ CreatLeadScreen As screen:
                         Font: =Font.Arial
                         Height: =If(VarZipcode,30,0)
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                        Text: =Parent.DisplayName
+                        Text: ="Zip Code"
                         Visible: =VarZipcode || !IsBlank(IntxtZipCode)
                         Width: =Parent.Width - 50
                         Wrap: =false
