--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -135,12 +135,14 @@ LeadListScreen As screen:
                             ChevronHoverBackground: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
                             DisplayFields: =["Value"]
                             InputTextPlaceholder: ="Select District"
-                            Items: =Distinct(Filter(SHTechnicians,Territory=cmbxregionfilterLS.Selected.Value),District)
+                            IsSearchable: =false
+                            Items: |
+                                =Distinct(Filter(SHTechnicians,Territory=cmbxregionfilterLS.Selected.Value),District)
                             PressedColor: =RGBA(0, 0, 0, 1)
                             PressedFill: =RGBA(0, 0, 0, 0)
                             Reset: =true
                             SearchFields: =["Value"]
-                            SearchItems: =Search(Distinct(Filter(SHTechnicians,Territory=cmbxregionfilterLS.Selected.Value),District),cmbxdistrictfilterLS.SearchText,"Value")
+                            SearchItems: =[]
                             SelectionFill: =Header.SHRed
                             Width: =200
                             X: =cmbxregionfilterLS.X+cmbxregionfilterLS.Width+5
@@ -154,12 +156,14 @@ LeadListScreen As screen:
                             DisplayFields: =["Value"]
                             HoverFill: =RGBA(0, 0, 0, 0)
                             InputTextPlaceholder: ="Select Territory"
-                            Items: =Distinct(Filter(SHTechnicians,Area=cmbxareafilterLS.Selected.Value),Territory)
+                            IsSearchable: =false
+                            Items: |
+                                =Distinct(Filter(SHTechnicians,Area=cmbxareafilterLS.Selected.Value),Territory)
                             PressedColor: =RGBA(0, 0, 0, 1)
                             PressedFill: =RGBA(0, 0, 0, 0)
                             Reset: =true
                             SearchFields: =["Value"]
-                            SearchItems: =Search(Distinct(Filter(SHTechnicians,Area=cmbxareafilterLS.Selected.Value),Territory),cmbxregionfilterLS.SearchText,"Value")
+                            SearchItems: =[]
                             SelectionFill: =Header.SHRed
                             SelectMultiple: =false
                             Width: =200
@@ -171,14 +175,15 @@ LeadListScreen As screen:
                             BorderColor: =Header.SHRed
                             ChevronBackground: =Header.SHRed
                             ChevronHoverBackground: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
-                            DisplayFields: =["Value"]
+                            DisplayFields: =["cr02d_area"]
                             InputTextPlaceholder: ="Select Area"
-                            Items: =Distinct(SHTechnicians,Area) //Filter(SHTechnicians, District = cmbxdistrictfilterLS.Selected.Value)
+                            IsSearchable: =false
+                            Items: =Distinct(SHTechnicians,Area)
                             PressedColor: =RGBA(0, 0, 0, 1)
                             PressedFill: =RGBA(0, 0, 0, 0)
                             Reset: =true
-                            SearchFields: =["Value"]
-                            SearchItems: =Search(Distinct(SHTechnicians,Area) //Filter(SHTechnicians, District = cmbxdistrictfilterLS.Selected.Value),cmbxareafilterLS.SearchText,"Value")
+                            SearchFields: =["cr02d_area"]
+                            SearchItems: =[]
                             SelectionFill: =Header.SHRed
                             Width: =200
                             X: =15
