--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -142,7 +142,7 @@ LeadScreen As screen:
             lblqqteamnameLdS As label:
                 FontWeight: =FontWeight.Semibold
                 Size: =16
-                Text: ="QQ Team name"
+                Text: ="QQ Team Name"
                 Width: =200
                 ZIndex: =1
 
