--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -856,7 +856,7 @@ LeadScreen As screen:
 
                         lblzipcodeLdS As label:
                             FontWeight: =FontWeight.Bold
-                            Text: ="Zip code "
+                            Text: ="Zip Code "
                             Width: =200
                             ZIndex: =1
 
