--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -1329,7 +1329,7 @@ LeadScreen As screen:
                 FontWeight: =FontWeight.Semibold
                 PaddingLeft: =20
                 Text: |-
-                    ="Enter message to technician : " & glryleadlistLS.Selected.MechanicName
+                    ="Enter message to Technician : " & glryleadlistLS.Selected.MechanicName
                 Width: =Parent.Width-70
                 ZIndex: =1
 
