--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -1590,7 +1590,7 @@ LeadScreen As screen:
                         //Notify("Estimate number not found in the FP Estimate file for this lead Technician is entered.");
                 Set(
                                 VarPopUpEstimateNumberSubmittedmsg,
-                                "Estimate number not found in the FP Estimate file for this lead Technician is entered."
+                                "Estimate number not found in the FP Estimate file for this Lead Technician is entered."
                             );
                             Set(
                                 VarPopUpEstimateNumberSubmitted,
@@ -1616,7 +1616,7 @@ LeadScreen As screen:
                     );
                     Set(
                         VarPopUpEstimateNumberSubmittedmsg,
-                        "Estimate number of this lead technician is not found in FP Estimate file, Estimate number saved successfully.We will update Incentives Details when FPEstimate file is processed"
+                        "Estimate number of this lead technician is not found in FP Estimate file, Estimate number saved successfully. We will update Incentives Details when FPEstimate file is processed."
                     );
                     Set(
                         VarPopUpEstimateNumberSubmitted,
