--- a/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
@@ -525,7 +525,7 @@ DashboardScreen As screen:
             FontWeight: =FontWeight.Bold
             Height: =Parent.Height
             Size: =26
-            Text: ="QQ Team"
+            Text: ="QQ Team Dashboard"
             Width: =ctnHeaderDashboardScreen.Width/1.5
             X: =imgSchindlerlogoDS.Width+imgSchindlerlogoDS.X
             ZIndex: =3
