--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -121,7 +121,7 @@ LeadListScreen As screen:
                         txtinptsearchLS As text:
                             BorderColor: =Header.SHRed
                             Default: =""
-                            HintText: ="Search on Contract No./Mechanic Name/Lead Tracking No./QQ Team Name"
+                            HintText: ="Search on QQ Team Name, Mechanic Name, Contract No. or Lead Tracking No."
                             HoverBorderColor: =Header.SHRed
                             HoverFill: =RGBA(0, 0, 0, 0)
                             Width: =610
