--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -498,8 +498,7 @@ LeadListScreen As screen:
                             Height: =ctnlistheadingvalueLS.Height
                             HoverFill: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
                             OnSelect: |
-                                =If(ThisItem.LeadStatus="Submitted",Set(VarPopUpInprogress,true),Navigate(LeadScreen));
-                                Set(VarSelectedLead,ThisItem);
+                                =If(ThisItem.LeadStatus="Submitted",Set(VarSelectedLead,ThisItem);Set(VarPopUpInprogress,true),Set(VarSelectedLead,ThisItem);Navigate(LeadScreen));
                                 Refresh(LeadImages);
                             PressedColor: =//Self.Fill
                             PressedFill: =//Self.Color
