--- a/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
@@ -456,7 +456,7 @@ ScopeScreen As screen:
                         SelectionFill: =RGBA(202, 202, 202, 1)
                         SelectMultiple: =false
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                        Tooltip: ="Search scope *"
+                        Tooltip: ="Search Scope *"
                         Width: =Parent.Width - 60
                         X: =30
                         Y: =lblScope.Y + lblScope.Height +2
@@ -484,7 +484,7 @@ ScopeScreen As screen:
                         Font: =Font.Arial
                         Height: =If(VarScopeofwork,30,0)
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                        Text: =If(IsBlank(IntxtManuallyScopeofwork.Text),"Scope of work *","Scope of work")
+                        Text: =If(IsBlank(IntxtManuallyScopeofwork.Text),"Scope of Work *","Scope of Work")
                         Visible: =VarScopeofwork
                         Width: =Parent.Width - 60
                         Wrap: =false
@@ -525,7 +525,7 @@ ScopeScreen As screen:
                         SelectionFill: =RGBA(202, 202, 202, 1)
                         SelectMultiple: =false
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                        Tooltip: =If(IsBlank(IntxtManuallyScopeofwork.Text),"Scope of work *","Scope of work")
+                        Tooltip: =If(IsBlank(IntxtManuallyScopeofwork.Text),"Scope of Work *","Scope of Work")
                         Width: =Parent.Width - 60
                         X: =30
                         Y: =lblScopeofwork.Y + lblScopeofwork.Height+2
@@ -574,7 +574,7 @@ ScopeScreen As screen:
                         DisplayMode: =Parent.DisplayMode
                         Font: =Font.Arial
                         Height: =100
-                        HintText: =If(VarCustomScopeofwork,"",If(IsBlank(CboxScopeofwork.SelectedItems),"Custom scope of work (manually entered) *","Custom scope of work (manually entered)"))
+                        HintText: =If(VarCustomScopeofwork,"",If(IsBlank(CboxScopeofwork.SelectedItems),"Custom Scope of Work (Manually Entered) *","Custom Scope of Work (Manually Entered)"))
                         HoverBorderColor: =RGBA(202, 202, 202, 1)
                         HoverFill: =RGBA(0, 0, 0, 0)
                         MaxLength: =Parent.MaxLength
@@ -592,7 +592,7 @@ ScopeScreen As screen:
                         RadiusTopLeft: =0
                         RadiusTopRight: =0
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                        Tooltip: =If(IsBlank(CboxScopeofwork.SelectedItems),"Custom scope of work (manually entered) *","Custom scope of work (manually entered)")
+                        Tooltip: =If(IsBlank(CboxScopeofwork.SelectedItems),"Custom Scope of Work (Manually Entered) *","Custom Scope of Work (Manually Entered)")
                         Width: =Parent.Width - 60
                         X: =30
                         Y: =lblManuallyScopeofwork.Y + lblManuallyScopeofwork.Height+2
@@ -605,7 +605,7 @@ ScopeScreen As screen:
                         Font: =Font.Arial
                         Height: =If(VarCustomScopeofwork,30,0)
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                        Text: =If(IsBlank(CboxScopeofwork.SelectedItems),"Custom scope of work(manually entered) *","Custom scope of work(manually entered)")
+                        Text: =If(IsBlank(CboxScopeofwork.SelectedItems),"Custom Scope of Work(Manually Entered) *","Custom Scope of Work(Manually Entered)")
                         Visible: =VarCustomScopeofwork
                         Width: =Parent.Width - 50
                         X: =28
